# Embedded_linux_diploma

./: README.md
00.Content/: Readme.md
00.Embinux/BuildRoot/: Readme.md
00.Embinux/Customize linux from scratch/: Readme.md
00.Embinux/Device Driver/: Readme.md
00.Embinux/Linux Admin/: Readme.md
00.Embinux/Modern C++ & OPP/: Readme.md
00.Embinux/Python/: Readme.md
00.Embinux/Qt Creator/: Readme.md
00.Embinux/Raspberry pi/: Readme.md
00.Embinux/Yocto/: Readme.md
01.C++/1.Introduction Tasks/: 3.Right Triangle.cpp  4.vowel.cpp  5.Multi Table.cpp  6.Digit Sum.cpp
01.C++/2.Derived Tasks/: 1.Function max_number in array.cpp  2.search for a number in the array.cpp  (+6 more)
03.Linux&Bach/: main.cpp
03.Linux&Bash/: File_Descriptor.c  Simple_Shell.c
04.Raspberry pi/: button_download  button_led  dht11_test  gpio_test  led.cpp  publisher.cpp  test_button.cpp
04.Raspberry pi/4.Iot/Mqtt/: CMakeLists.txt  Switcher  main.cpp  mqtt.ino  publisher  publisher.cpp  publisher.hpp  subscriber  subscriber.cpp
05.Customized Linux from scratch/: README.md
06.Yocto/: README.md
07.Device Driver/: README.md
09.Rust/: challange01.rs  challange02.rs  challange03.rs  challange04.rs  challange05.rs  challange06.rs  challange07.rs  challange08.rs  challange09.rs  challange10.rs  challange11.rs  challange12.rs  challange14.rs  challange15.rs  challange16.rs  challange17.rs  challange18.rs  challange19.rs  challange20.rs  challange21.rs  challange22.rs  challange23.rs  challange24.rs  challange25.rs  threadchallange26.rs
09.Rust/Projects/ChatRoom/: Cargo.toml
(+387 files in other folders)
