[package]
name = "Chat-Room"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "client"          
path = "bin/client.rs"
[[bin]]
name = "server"   
path = "bin/server.rs"
[dependencies]
cursive = "0.21"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"